--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cracking-the-coding-interview",
+  "name": "lodash-fp-challenges",
   "version": "1.0.0",
-  "description": "An attempt to solve all question in Cracking the Coding Interview using JavaScirpt",
+  "description": "Challenges solved with functional programming approach using lodash/fp, with tests and Typescript",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -11,26 +11,28 @@
     "build": "rm -rf built/ && tsc"
   },
   "keywords": [],
-  "author": "Can Rozanes",
+  "author": "Matheus Cezar",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
-    "@babel/preset-env": "^7.11.0",
-    "@types/jest": "^26.0.10",
+    "@babel/preset-env": "^7.18.2",
+    "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
-    "babel-jest": "^26.3.0",
-    "eslint": "^7.7.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^23.20.0",
-    "husky": "^4.3.0",
-    "jest": "^26.4.2",
-    "lint-staged": "^10.3.0",
-    "prettier": "^2.1.1",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.6.2",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.7.2"
   },
   "husky": {
     "hooks": {
