--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Matheus Cezar",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.190",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
