--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Matheus Cezar",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.190",
+    "@types/lodash": "^4.14.191",
+    "fp-ts": "^2.13.1",
+    "io-ts-types": "^0.5.19",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -31,9 +33,9 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "husky": {
     "hooks": {
